--- a/src/Components/LandingPage.css
+++ b/src/Components/LandingPage.css
@@ -1,15 +1,6 @@
 body {
     font-family: 'Bebas Neue';
 }
-.quiz {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    margin-top: 700px;
-}
 .center{
     position:absolute;
     top:50%;
@@ -63,23 +54,57 @@ body {
     color:#fff;
   }
 
-  .question-label {
-    font-family: 'Bebas Neue';
-    font-size: 3rem;
-    color: white;
-    text-shadow: 3px 5px 2px #474747;
-    margin-bottom: 40px;
-  }
-  .radio label {
-    color: white;
-    font-weight: bold;
-    font-style: italic;
-    font-size: 2rem;
-  }
-  .singular {
-    margin-bottom: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
+.LinkContainer {
+  margin-top: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.Link{
+  margin-right: 30px;
+  margin-left: 30px;
+  text-decoration: none;
+  color: white;
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
 
+.Link:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.Link:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.Link:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
